# SympyPaperPrinter

./: README.md  pyproject.toml  setup_venv.ps1  setup_venv.sh
demos/: SppDemo-OptimalControlWithAerospaceApplications-01-05.py
src/sympy_paper_printer/: __init__.py  config.py  render.py  report.py  runtime.py  sympy_view.py
tests/: conftest.py  test_config.py  test_renderer.py  test_report.py  test_runtime.py  test_sympy_view.py
